# server/src/server.js
@@ -18,6 +18,7 @@ import incomeRouter from "./routes/incomeRoutes.js";
 import loanRouter from "./routes/loanRoutes.js";
 import dashboardRouter from "./routes/dashboardRoutes.js";
 import analyticsRouter from "./routes/analyticsRoutes.js";
+import profileRouter from "./routes/profileRoutes.js"; 
 const require = createRequire(import.meta.url);
 const swaggerOutput = require("./swagger-output.json");
 
@@ -34,7 +35,7 @@ app.use(
         callback(new Error("Not allowed by CORS"));
       }
     },
-    methods: ["GET", "POST", "PUT", "DELETE", "OPTIONS"],
+    methods: ["GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"],
     allowedHeaders: ["Content-Type", "Authorization"],
     credentials: true, // if using cookies or auth
   }),
@@ -86,6 +87,9 @@ app.use("/api/dashboard", dashboardRouter);
 
 //analytics
 app.use("/api/analytics", analyticsRouter);
+
+//profile
+app.use("/api/profile", profileRouter);
 
 // must be after all routes
 app.use(errorHandler);
